<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_welcome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="2"

    tools:context="com.example.android.picshape.view.ParamActivity">

    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.1"/>

    <ImageView
        android:id="@+id/miniature_imageView"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/genie"/>
    <TextView
        android:id="@+id/title_textView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:textSize="32sp"
        android:textColor="@color/primary_text"
        android:padding="20dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/parameters_text" />

    <LinearLayout
        android:id="@+id/progress_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.1"
        android:weightSum="1"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone" >

        <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.2"/>

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.35"
            android:id="@+id/progressBar"
            />
        <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.2"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:gravity="center_horizontal"
            android:textColor="@color/accent"
            android:textSize="20sp"
            android:textAllCaps="true"
            android:text="Let the magic begin"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/parameters_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.1"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="24sp"
            android:text="@string/mode_text" />
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:id="@+id/spinner_mode"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="24sp"
            android:text="@string/iteration_text" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:inputType="text|number"
            android:text="30"
            android:ems="10"
            android:id="@+id/iteration_editText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="24sp"
            android:text="@string/format_text" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_format" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:background="@color/primary">
        <Button
            android:id="@+id/send_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:text="@string/send_text"/>
    </RelativeLayout>
</LinearLayout>
